--- a/puppet/modules/redmine/files/database.yml
+++ b/puppet/modules/redmine/files/database.yml
@@ -4,7 +4,7 @@
 # Line indentation must be 2 spaces (no tabs).
 
 production:
-  adapter: mysql2
+  adapter: mysql
   database: redmine
   host: localhost
   username: redmine
@@ -12,7 +12,7 @@ production:
   encoding: utf8
 
 development:
-  adapter: mysql2
+  adapter: mysql
   database: redmine_development
   host: localhost
   username: redmine
@@ -23,7 +23,7 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: mysql2
+  adapter: mysql
   database: redmine_test
   host: localhost
   username: redmine
